libtorrentsharp/LibtorrentSharp.Native/include/library.h

    // Web seed (BEP-19 / BEP-17) snapshot and mutation. Changes apply immediately
    // to the in-memory URL set; they are not persisted to the .torrent file.
    LTS_EXPORT void lts_get_web_seeds(lt::torrent_handle* torrent, web_seed_list* out_list);
    LTS_EXPORT void lts_destroy_web_seeds(web_seed_list* list);
    LTS_EXPORT void lts_add_web_seed(lt::torrent_handle* torrent, const char* url);
    LTS_EXPORT void lts_remove_web_seed(lt::torrent_handle* torrent, const char* url);
    // Serialises the torrent's current metadata to a bencoded .torrent byte
    // buffer using libtorrent's create_torrent / bencode surface. Returns true
    // and fills *out_data / *out_size on success; returns false when the
    // torrent has no metadata yet (pre-metadata magnet). The caller is
    // responsible for releasing the buffer via lts_free_bytes.
    LTS_EXPORT bool lts_export_torrent_to_bytes(lt::torrent_handle* torrent, uint8_t** out_data, int32_t* out_size);
    // Releases a byte buffer previously returned by lts_export_torrent_to_bytes.
    // No-op on nullptr.
    LTS_EXPORT void lts_free_bytes(uint8_t* data);
    // Per-torrent rate caps in bytes/sec. libtorrent treats <= 0 as unlimited; the
    // getter may return 0 or -1 for the unlimited state depending on internal bookkeeping.
    LTS_EXPORT void lts_set_torrent_upload_limit(lt::torrent_handle* torrent, int32_t bytes_per_second);
    LTS_EXPORT int32_t lts_get_torrent_upload_limit(lt::torrent_handle* torrent);
    LTS_EXPORT void lts_set_torrent_download_limit(lt::torrent_handle* torrent, int32_t bytes_per_second);
    LTS_EXPORT int32_t lts_get_torrent_download_limit(lt::torrent_handle* torrent);
    // Toggle libtorrent's super-seeding mode for the torrent. Only has an effect
    // once the torrent is in the seeding state.
    LTS_EXPORT void lts_set_super_seeding(lt::torrent_handle* torrent, bool enabled);
    // Generic torrent_flags_t accessors. `flags` and `mask` carry libtorrent's
    // torrent_flags::* bits (see include/libtorrent/torrent_flags.hpp). `set` only
    // rewrites bits where `mask` is 1 — leaves the rest untouched. `unset` clears
    // every bit set in `flags`. `get` returns the current bitset; 0 when invalid.
    LTS_EXPORT uint64_t lts_get_torrent_flags(lt::torrent_handle* torrent);
    LTS_EXPORT void lts_set_torrent_flags(lt::torrent_handle* torrent, uint64_t flags, uint64_t mask);
    LTS_EXPORT void lts_unset_torrent_flags(lt::torrent_handle* torrent, uint64_t flags);
    // Per-piece download priority surface. `priority` mirrors libtorrent's
    // download_priority_t (0=skip, 1=low, 4=default, 7=top). Indices are
    // piece_index_t. Invalid handles or out-of-range indices no-op on set and
    // return 0 on get.
    LTS_EXPORT uint8_t lts_get_piece_priority(lt::torrent_handle* torrent, int32_t piece_index);
    LTS_EXPORT void lts_set_piece_priority(lt::torrent_handle* torrent, int32_t piece_index, uint8_t priority);
    // Bulk accessors. `get` returns the torrent's full piece_priorities vector;
    // release via lts_destroy_piece_priorities. `set` replaces the vector
    // wholesale — count exceeding the torrent's piece count is silently truncated.
    LTS_EXPORT void lts_get_piece_priorities(lt::torrent_handle* torrent, piece_priority_list* out_list);
    LTS_EXPORT void lts_destroy_piece_priorities(piece_priority_list* list);
    LTS_EXPORT void lts_set_piece_priorities(lt::torrent_handle* torrent, const uint8_t* priorities, int32_t count);
    // Whether the torrent has the given piece fully downloaded + verified on disk.
    // Returns false on invalid handle or out-of-range index.
    LTS_EXPORT bool lts_have_piece(lt::torrent_handle* torrent, int32_t piece_index);
    // Fills out_bits with a packed LSB-first bitfield of piece completion.
    // Byte k, bit j represents piece (k*8 + j). Caller must allocate
    // ceil(num_pieces/8) bytes; num_bytes must equal that allocation. No-op on
    // null or invalid inputs.
    LTS_EXPORT void lts_get_piece_bitfield(lt::torrent_handle* torrent, uint8_t* out_bits, int32_t num_bytes);
    // Explicitly queues a peer to try on the torrent. `ipv6_address` is always
    // v6; v4 addresses must be passed in v4-mapped form (::ffff:0:0/96 prefix)
    // to match the peer_information layout. Connect is asynchronous; libtorrent
    // surfaces the result via the peer-connect alerts. Returns true when the
    // connect was queued, false on invalid handle or port==0.
    LTS_EXPORT bool lts_connect_peer(lt::torrent_handle* torrent, const uint8_t ipv6_address[16], uint16_t port);
    // Clears any sticky error state on the torrent — e.g. after an out-of-disk
    // hash-check failure. Lets the torrent retry once the underlying problem
    // has been resolved. No-op on invalid handle.
    LTS_EXPORT void lts_clear_error(lt::torrent_handle* torrent);
    // Renames file at `file_index` to `new_name` (UTF-8). `new_name` may be a
    // relative path inside the torrent but must not be absolute or empty. The
    // rename is asynchronous — libtorrent surfaces the outcome via
    // file_renamed_alert / file_rename_failed_alert. No-op on invalid handle,
    // out-of-range index, pre-metadata, or null/empty name.
    LTS_EXPORT void lts_rename_file(lt::torrent_handle* torrent, int32_t file_index, const char* new_name);
    // Snapshot of port-forwarding mappings the session has registered (UPnP +
    // NAT-PMP). Populated from alerts — libtorrent 2.x has no direct
    // enumeration API. Release via lts_destroy_port_mappings.
    LTS_EXPORT void lts_get_port_mappings(lt::session* session, port_mapping_list* out_list);
    LTS_EXPORT void lts_destroy_port_mappings(port_mapping_list* list);
    // Replaces the session's IP filter with the supplied rules. Pass length=0
    // (rules may be null) to clear the filter. Start/end IPs use the same
    // v4-mapped v6 representation as peer_information; flags carry libtorrent's
    // ip_filter bitmask (0 = allowed, 1 = blocked).
    LTS_EXPORT void lts_set_ip_filter(lt::session* session, const ip_filter_rule* rules, int32_t length);
    // Exports the session's current IP filter as a flat rules list (v4 ranges
    // are v4-mapped into the 16-byte v6 buffer). Release via lts_destroy_ip_filter.
    LTS_EXPORT void lts_get_ip_filter(lt::session* session, ip_filter_rules* out_list);
    LTS_EXPORT void lts_destroy_ip_filter(ip_filter_rules* list);
    // Triggers an asynchronous dht_stats_alert. The alert surfaces the routing-
    // table totals (nodes, replacements, active requests) as a cs_dht_stats_alert.
    LTS_EXPORT void lts_post_dht_stats(lt::session* session);
    // Triggers an asynchronous session_stats_alert. The alert surfaces a flat
    // int64 counter array (~140 metrics in current libtorrent). The mapping
    // from metric name → array index is queried separately via the
    // session_stats_metrics surface below; the index layout is stable for a
    // given libtorrent build.
    LTS_EXPORT void lts_post_session_stats(lt::session* session);
    // Static metric metadata surface. Returned values reflect libtorrent's
    // built-in registry (lt::session_stats_metrics()) which is independent of
    // any session — the binding caches the vector on first call. Names are
    // libtorrent-owned static literals; the caller does NOT free them.
    //
    // The returned `value_index` is the position in the
    // session_stats_alert::counters() array — i.e. the index consumers should
    // use against `cs_session_stats_alert::counters` from slice 1.
    // `type` is libtorrent's metric_type_t: 0 = counter, 1 = gauge.
    LTS_EXPORT int32_t lts_session_stats_metric_count();
    LTS_EXPORT void lts_session_stats_metric_at(
        int32_t idx,
        const char** out_name,
        int32_t* out_value_index,
        int32_t* out_type);
    // Resolves a metric name to its value_index (the position in the
    // session_stats_alert::counters() array). Returns -1 if no metric matches.
    // Forwards to lt::find_metric_idx, which uses an O(log N) lookup.
    LTS_EXPORT int32_t lts_session_stats_find_metric_idx(const char* name);
    // Captures the session's full state as a bencoded byte buffer suitable for
    // restoring via lts_create_session_from_state. Wraps libtorrent's modern
    // surface (`session_handle::session_state()` + `write_session_params_buf`)
    // — the deprecated save_state(entry&) / load_state(bdecode_node&) pair is
    // not exposed.
    //
    // On success, *out_buf is a heap-allocated buffer the caller owns; release
    // it with lts_destroy_session_state_buf. On failure (null session, OOM,
    // libtorrent throws), *out_buf is set to nullptr and *out_len to 0.
    LTS_EXPORT void lts_session_save_state(lt::session* session, char** out_buf, int32_t* out_len);
    LTS_EXPORT void lts_destroy_session_state_buf(char* buf);
    // Constructs a new session from a previously-captured state buffer.
    // Returns nullptr on parse failure (malformed bencoding, invalid keys,
    // etc.). The returned session is owned by the caller — destroy via
    // destroy_session as usual. Note that the saved alert_mask is preserved;
    // managed callers force-apply their required categories via UpdateSettings
    // after construction.
    LTS_EXPORT lt::session* lts_create_session_from_state(const char* buf, int32_t length);
    // Toggle sequential download mode. When enabled, libtorrent requests pieces
    // in order rather than rarest-first — useful for streaming / progressive UX.
    LTS_EXPORT void lts_set_sequential(lt::torrent_handle* torrent, bool enabled);
    // Sets the priority of a file's first and last piece. Resolves the piece
    // indices from the torrent's file_storage and writes both with piece_priority.
    // No-op when metadata hasn't resolved yet (magnet pre-metadata case).
    // `priority` maps to libtorrent's download_priority_t (0 = skip, 1 = low,
    // 4 = default, 7 = top).
    LTS_EXPORT void lts_set_file_piece_priority(lt::torrent_handle* torrent, int32_t file_index, uint8_t priority);