libtorrentsharp/LibtorrentSharp/Native/NativeMethods.cs


    [LibraryImport(LibraryName, EntryPoint = "lts_get_web_seeds")]
    public static partial void GetWebSeeds(IntPtr torrentHandle, out NativeStructs.WebSeedList outList);

    [LibraryImport(LibraryName, EntryPoint = "lts_destroy_web_seeds")]
    public static partial void FreeWebSeedList(ref NativeStructs.WebSeedList list);

    [LibraryImport(LibraryName, EntryPoint = "lts_add_web_seed", StringMarshalling = StringMarshalling.Utf8)]
    public static partial void AddWebSeed(IntPtr torrentHandle, string url);

    [LibraryImport(LibraryName, EntryPoint = "lts_remove_web_seed", StringMarshalling = StringMarshalling.Utf8)]
    public static partial void RemoveWebSeed(IntPtr torrentHandle, string url);

    [LibraryImport(LibraryName, EntryPoint = "lts_export_torrent_to_bytes")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static partial bool ExportTorrentToBytes(IntPtr torrentHandle, out IntPtr outData, out int outSize);

    [LibraryImport(LibraryName, EntryPoint = "lts_free_bytes")]
    public static partial void FreeBytes(IntPtr data);

    /// <summary>Per-torrent upload cap in bytes/sec. 0 = unlimited.</summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_set_torrent_upload_limit")]
    public static partial void SetUploadLimit(IntPtr torrentSessionHandle, int bytesPerSecond);

    [LibraryImport(LibraryName, EntryPoint = "lts_get_torrent_upload_limit")]
    public static partial int GetUploadLimit(IntPtr torrentSessionHandle);

    /// <summary>Per-torrent download cap in bytes/sec. 0 = unlimited.</summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_set_torrent_download_limit")]
    public static partial void SetDownloadLimit(IntPtr torrentSessionHandle, int bytesPerSecond);

    [LibraryImport(LibraryName, EntryPoint = "lts_get_torrent_download_limit")]
    public static partial int GetDownloadLimit(IntPtr torrentSessionHandle);

    /// <summary>
    /// Toggles libtorrent's super-seeding mode. Only has an effect once the torrent
    /// is in the seeding state.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_set_super_seeding")]
    public static partial void SetSuperSeeding(IntPtr torrentSessionHandle, [MarshalAs(UnmanagedType.I1)] bool enabled);

    /// <summary>
    /// Reads the torrent's current <c>torrent_flags_t</c> bitset. Returns 0 when
    /// the handle is invalid.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_get_torrent_flags")]
    public static partial ulong GetTorrentFlags(IntPtr torrentSessionHandle);

    /// <summary>
    /// Applies <paramref name="flags"/> to the torrent under <paramref name="mask"/> —
    /// only bits where mask is 1 are rewritten; the rest are left untouched.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_set_torrent_flags")]
    public static partial void SetTorrentFlags(IntPtr torrentSessionHandle, ulong flags, ulong mask);

    /// <summary>Clears every bit set in <paramref name="flags"/>.</summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_unset_torrent_flags")]
    public static partial void UnsetTorrentFlags(IntPtr torrentSessionHandle, ulong flags);

    /// <summary>
    /// Toggles libtorrent's sequential download mode — pieces requested in order
    /// instead of rarest-first.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_set_sequential")]
    public static partial void SetSequentialDownload(IntPtr torrentSessionHandle, [MarshalAs(UnmanagedType.I1)] bool enabled);

    /// <summary>
    /// Sets the priority of a file's first and last piece. No-op when metadata
    /// hasn't resolved yet.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_set_file_piece_priority")]
    public static partial void SetFileFirstLastPiecePriority(IntPtr torrentSessionHandle, int fileIndex, byte priority);

    /// <summary>
    /// Reads a single piece's download priority. Returns 0 (skip) on invalid
    /// handle, missing metadata, or out-of-range index.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_get_piece_priority")]
    public static partial byte GetPiecePriority(IntPtr torrentSessionHandle, int pieceIndex);

    /// <summary>
    /// Sets a single piece's download priority. No-op on invalid handle,
    /// missing metadata, or out-of-range index.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_set_piece_priority")]
    public static partial void SetPiecePriority(IntPtr torrentSessionHandle, int pieceIndex, byte priority);

    /// <summary>
    /// Snapshot of every piece's download priority. Release via
    /// <see cref="FreePiecePriorities"/>.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_get_piece_priorities")]
    public static partial void GetPiecePriorities(IntPtr torrentSessionHandle, out NativeStructs.PiecePriorityList list);

    [LibraryImport(LibraryName, EntryPoint = "lts_destroy_piece_priorities")]
    public static partial void FreePiecePriorities(ref NativeStructs.PiecePriorityList list);

    /// <summary>
    /// Replaces every piece's download priority in one call. Indices beyond
    /// the torrent's piece count are silently truncated.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_set_piece_priorities")]
    public static partial void SetPiecePriorities(IntPtr torrentSessionHandle, byte[] priorities, int count);

    /// <summary>
    /// True when the piece is fully downloaded and verified on disk. Returns
    /// false on invalid handle, missing metadata, or out-of-range index.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_have_piece")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static partial bool HavePiece(IntPtr torrentSessionHandle, int pieceIndex);

    /// <summary>
    /// Fills <paramref name="outBits"/> with a packed LSB-first bitfield of
    /// piece completion in one native call. <paramref name="numBytes"/> must
    /// equal <c>ceil(numPieces / 8)</c>. No-op on null or invalid handle.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_get_piece_bitfield")]
    public static partial void GetPieceBitfield(IntPtr torrentSessionHandle, [Out] byte[] outBits, int numBytes);

    /// <summary>
    /// Queues an explicit peer connect attempt. <paramref name="ipv6Address"/>
    /// must be exactly 16 bytes (v4-mapped v6 for v4 peers). Returns true when
    /// the attempt was queued, false on invalid handle / port==0 / bad inputs.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_connect_peer")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static partial bool ConnectPeer(IntPtr torrentSessionHandle, byte[] ipv6Address, ushort port);

    /// <summary>
    /// Clears any sticky error state on the torrent — e.g. after an
    /// out-of-disk failure. No-op on invalid handle.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_clear_error")]
    public static partial void ClearError(IntPtr torrentSessionHandle);

    /// <summary>
    /// Renames a file inside the torrent. The rename is asynchronous — result
    /// fires via <c>file_renamed_alert</c> / <c>file_rename_failed_alert</c>.
    /// No-op on invalid handle / out-of-range index / pre-metadata / null or
    /// empty name.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_rename_file", StringMarshalling = StringMarshalling.Utf8)]
    public static partial void RenameFile(IntPtr torrentSessionHandle, int fileIndex, [MarshalAs(UnmanagedType.LPUTF8Str)] string newName);

    /// <summary>
    /// Snapshot of port-forwarding mappings tracked on the session. Release via
    /// <see cref="FreePortMappings"/>.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_get_port_mappings")]
    public static partial void GetPortMappings(IntPtr sessionHandle, out NativeStructs.PortMappingList mappings);

    [LibraryImport(LibraryName, EntryPoint = "lts_destroy_port_mappings")]
    public static partial void FreePortMappings(ref NativeStructs.PortMappingList mappings);

    /// <summary>
    /// Replaces the session's IP filter with the supplied rule array. Pass
    /// <paramref name="length"/> = 0 (and <paramref name="rules"/> may be null)
    /// to clear the filter entirely.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_set_ip_filter")]
    public static unsafe partial void SetIpFilter(IntPtr sessionHandle, NativeStructs.IpFilterRule* rules, int length);

    /// <summary>
    /// Exports the session's current IP filter. Native-allocated; release via
    /// <see cref="FreeIpFilter"/>.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_get_ip_filter")]
    public static partial void GetIpFilter(IntPtr sessionHandle, out NativeStructs.IpFilterRules rules);

    [LibraryImport(LibraryName, EntryPoint = "lts_destroy_ip_filter")]
    public static partial void FreeIpFilter(ref NativeStructs.IpFilterRules rules);

    /// <summary>
    /// Triggers an asynchronous <c>dht_stats_alert</c> on the session. The alert
    /// surfaces routing-table totals (nodes, replacements, active requests).
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_post_dht_stats")]
    public static partial void PostDhtStats(IntPtr sessionHandle);

    /// <summary>
    /// Triggers an asynchronous <c>session_stats_alert</c> on the session. The
    /// alert surfaces a flat <c>int64</c> counter array; the metric name → index
    /// mapping is queried via the SessionStatsMetric* methods below.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_post_session_stats")]
    public static partial void PostSessionStats(IntPtr sessionHandle);

    /// <summary>
    /// Total number of metrics in libtorrent's session-stats registry. The
    /// registry is build-static — same answer every call.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_session_stats_metric_count")]
    public static partial int SessionStatsMetricCount();

    /// <summary>
    /// Fills metric metadata for the entry at <paramref name="idx"/>. The name
    /// pointer references a libtorrent-owned static literal; the caller must
    /// not free it.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_session_stats_metric_at")]
    public static partial void SessionStatsMetricAt(int idx, out IntPtr outName, out int outValueIndex, out int outType);

    /// <summary>
    /// Resolves a metric name to its <c>value_index</c> (the position in
    /// <see cref="NativeEvents.SessionStatsAlert.counters"/>). Returns -1 when
    /// no metric matches.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_session_stats_find_metric_idx", StringMarshalling = StringMarshalling.Utf8)]
    public static partial int SessionStatsFindMetricIdx(string name);

    /// <summary>
    /// Captures the session's full state as a heap-allocated bencoded buffer.
    /// On success, <paramref name="outBuf"/> points at native memory the caller
    /// must release via <see cref="FreeSessionStateBuf"/>. On failure, both
    /// outputs are zeroed.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_session_save_state")]
    public static partial void SessionSaveState(IntPtr sessionHandle, out IntPtr outBuf, out int outLen);

    /// <summary>Releases a buffer returned by <see cref="SessionSaveState"/>.</summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_destroy_session_state_buf")]
    public static partial void FreeSessionStateBuf(IntPtr buf);

    /// <summary>
    /// Constructs a new session from a previously-captured state buffer.
    /// Returns <see cref="IntPtr.Zero"/> on parse failure (malformed bencoding,
    /// invalid keys, etc.).
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_create_session_from_state")]
    public static partial IntPtr CreateSessionFromState([In] byte[] buf, int length);
